--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body, ul, li, p{
     margin: 0px;
     padding: 0px;
+    overflow-x: hidden; 
     list-style: none;
     font-size: 1.2rem;
     font-family: Arial, Helvetica, sans-serif;
@@ -19,6 +20,8 @@ h1 {
 
 img {
     max-width: 100%;
+    height: 250px;
+    object-fit: cover;
     display: block;
     border-radius: 10px;
 }
@@ -78,11 +81,58 @@ img {
 
 }
 
-.footer-container {
-    background:  blue;
+
+footer {
+    background-color: black;
+    height: auto;
+    width: 100vw;
+    margin-top: 30px;
+    padding: 40px;
+}
+
+.footer-content {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding: 20px;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+
+.footer-content h3 {
+    color: #fff;
+    font-size: 1.8rem;
+    font-weight: 400;
+    text-transform: capitalize;
+    line-height: 0.4rem;
+}
+
+.footer-content p {
+    color: #fff;
+    max-width: 500px;
+    margin: 10px auto;
+    line-height: 28px;
+    font-size: 14px;
+}
+
+.footer-medias {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem 0 3rem 0rem;
+    ;
+}
+
+.medias li {
+    margin: 0 10px;
+}
+
+.socials a {
+    text-align: none;
+    color: #fff;
+}
+
+.medias a i {
+    font-size: 1.1rem;
+    transform: color .4s ease;
 
 }
