--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ img {
 }
 
 .flex > div {
-    flex: 1 1 250px;
+    flex: 1 1 300px;
     margin: 10px;
 }
 
@@ -74,10 +74,29 @@ img {
 
 .btn {
     align-items: center;
-    font-size: 20px;
+    width: 30%;
+    font-weight: 500;
     height: 30px;
     border: none;
     border-radius: 5px;
+    margin-top: 5px;
+    font-size: 1.25rem;
+    color:white;
+    background-color: #87CEEB;
+
+
+}
+.btn:hover {
+    background-color: #1E90FF;
+    cursor: pointer;
+}
+h3 {
+    margin-top: auto;
+    text-align: center;
+}
+
+p {
+text-align: justify;
 
 }
 
@@ -119,20 +138,9 @@ footer {
     align-items: center;
     justify-content: center;
     margin: 1rem 0 3rem 0rem;
-    ;
+    
 }
 
-.medias li {
-    margin: 0 10px;
-}
-
-.socials a {
-    text-align: none;
-    color: #fff;
-}
-
-.medias a i {
-    font-size: 1.1rem;
-    transform: color .4s ease;
-
+.footer-medias i {
+    margin: 10px 10px;
 }
